# aoc24

./: README.md  bootstrap.py  pyproject.toml
aoc24/: main.py
aoc24/src/puzzles/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py
